[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/player/Player.gd" type="Script" id=1]
[ext_resource path="res://src/player/assets/sprite_sheet.png" type="Texture" id=2]
[ext_resource path="res://src/shaders/Sprite_shader.tres" type="Material" id=3]
[ext_resource path="res://ui/Game_ui.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/player/spirts_pivot.gd" type="Script" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 23.9999
height = 8.00012

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "base_attack"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 26, 27, 28, 29, 30, 31, 32, 33, 34 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "cast_base_attack"
}, {
"args": [  ],
"method": "end_cast"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "cast_2"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "cast_skill_2"
}, {
"args": [  ],
"method": "end_cast"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "dash"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52, 53, 54, 55, 56 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "end_cast"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "death"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 70, 71, 72, 73, 74, 75, 76, 77 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=4]
resource_name = "run"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16, 17, 18 ]
}

[sub_resource type="CircleShape2D" id=11]
radius = 188.958

[node name="Player" type="KinematicBody2D" groups=["player"]]
position = Vector2( 962, 543 )
collision_layer = 16
collision_mask = 257
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 4096
current = true

[node name="Ui" parent="Camera2D" instance=ExtResource( 5 )]
margin_left = -962.0
margin_top = -543.0
margin_right = -962.0
margin_bottom = -543.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6.10352e-05, 19 )
shape = SubResource( 1 )

[node name="AnimationNode" type="Node2D" parent="."]

[node name="sprite" type="Sprite" parent="AnimationNode"]
material = ExtResource( 3 )
position = Vector2( 0, -10 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
hframes = 9
vframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationNode"]
anims/RESET = SubResource( 2 )
anims/base_attack = SubResource( 5 )
anims/cast_2 = SubResource( 6 )
anims/dash = SubResource( 8 )
anims/death = SubResource( 9 )
anims/idle = SubResource( 3 )
anims/run = SubResource( 4 )

[node name="Dash_pivot" type="Position2D" parent="AnimationNode"]
position = Vector2( -33, 62 )

[node name="Muzzle" type="RayCast2D" parent="."]
position = Vector2( -6.10352e-05, 19 )
cast_to = Vector2( 70, 0 )
collision_mask = 0
collide_with_bodies = false

[node name="Spawn_position" type="Position2D" parent="Muzzle"]
position = Vector2( 46, 0 )

[node name="Spirts_pivot" type="Node2D" parent="."]
position = Vector2( -2, 17 )
script = ExtResource( 6 )

[node name="1" type="Node2D" parent="Spirts_pivot"]
position = Vector2( 48, -40 )

[node name="2" type="Node2D" parent="Spirts_pivot"]
position = Vector2( -48, 56 )

[node name="3" type="Node2D" parent="Spirts_pivot"]
position = Vector2( 48, 56 )

[node name="4" type="Node2D" parent="Spirts_pivot"]
position = Vector2( -48, -40 )

[node name="PickUpZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpZone"]
position = Vector2( -6.10352e-05, 19 )
shape = SubResource( 11 )

[connection signal="body_entered" from="PickUpZone" to="." method="_on_PickUpZone_body_entered"]
